# centralized-repo

./: .pre-commit-hooks.yaml  README.md  pre-commit-config.yaml.template  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: branch-name-convention.yml  cd-build-dotnet-new.yml  cd-build-dotnet.yml  cd-build-node-and-upload-s3.yml  cd-build-vue.yml  cd-deploy-container.yml  cd-deploy-dist-iis-website.yml  cd-deploy-iis.yml  cd-deploy-image.yml  cd-deploy-publish-iis-application.yml  cd-deploy-publish-ws.yml  cd-deploy-ws-publish.yml  cd-deploy-ws.yml  cd-is-new-release.yml  cd-pre-build-release.yml  cd-pre-release-checks.yml  cd-publish.yml  cd-update-argocd-image-sha.yml  cd-update-argocd.yml  cd-upload-s3.yml  cd-windows-service-publish.yml  ci-build-and-push-image.yml  ci-docker-build-push.yml  ci-push-image.yml  docker-build-push.yml  dotnet-run-tests.yml  download-s3.yml  dummyWorkFlow.yml  pr-branch-convention.yml  release-drafter-org.yml  upload-s3.yml
.github/workflows/old workflows/centralized-repo/: cd-build-dotnet.yml  cd-build-vue.yml  cd-deploy-iis.yml  cd-deploy-image.yml  cd-deploy-ws.yml  ci-push-image.yml  ci-test-dotnet.yml
.github/workflows/old workflows/projects/auth-server/: cd-deploy-container.yml  cd-image-deploy.yml  ci-build-release.yml  ci-image-release.yml
.github/workflows/old workflows/projects/facility-spa/: cd-deploy-container.yml  (+4 more)
docker-files/databases/: docker-compose.sql-express.yml
docker-files/nginx/: default.conf  docker-compose.nginx-certbot.yml
hooks/: custom_formatter.py
scripts/: pre_commit_formatter.py
(+12 files in other folders)
